# chatgpt-uapi-client

./: .gitmodules  AGENTS.md  README.md  api_schema.json  debug_response.py  pyproject.toml  setup.sh  test_connection.py  test_json_validation.py
client/: __init__.py  api_client.py
client/gptuapi/: __init__.py  api_client.py  settings.py
gptuapi/: api_client.py  settings.py  validator.py
