[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-uapi-client"
version = "0.1.0"
description = "Client library for the ChatGPT UI API"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.package-dir]
"" = "client"

[tool.setuptools.packages.find]
where = ["client"]
include = ["gptuapi"]
